--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,63 @@
 <%= render 'shared/header' %>
 
-<h1>Books#index</h1>
-<p>全投稿一覧</p>
+<div class="top">
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-3">
+      
+    <p>User info</p>
+      <%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg', fallback: "no_image.jpg", size:'150x150' %>
+        <table class="table">
+          <tr>
+　　        <th>name</th>
+　　        <th><%= current_user.name %></th>
+　        </tr>
+　        <tr>
+　　        <th>introduction</th>
+　　        <th><%= current_user.introduction %></th>
+　　      </tr>
+        </table>
+      <%= link_to edit_user_path, class: "btn btn-default" do %>
+        <i class="fa fa-wrench"></i>
+      <% end %>
+      <p>New book</p>
+      <%= form_for(@book, url: '/users') do |f| %>
+      <% if @book.errors.any? %>
+        <p>Title</p>
+        <%= f.text_field :title %>
+        <p>Opinion</p>
+        <%= f.text_area :body %>
+        <%= f.submit 'Create Book' %>
+      <% end %>
+    </div>
+        
+    <div class="col-lg-9">
+      <p>Books</p>
+      <table class="table table-hover">
+        
+        <thead>
+          <tr>
+            <th></th>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
+        </thead>
+        <% @books.each do |book| %>
+        <tbody>
+          <tr>
+            <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
+            <td><%= link_to book.title, book_path(book) %></td>
+            <td><%= book.body %></td>
+          </tr>
+        </tbody>
+        <% end %>
+      </table>
+    </div>
+    
+  </div>
+</div>
+
+</div>
 
 <%= render 'shared/footer' %>
