--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,12 +7,12 @@
 
   <div class="field">
     <%= f.label :Name %><br />
-    <%= f.text_field :username, autofocus: true %>
+    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
   </div>
   
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.email_field :email, autofocus: true %>
   </div>
 
   <div class="field">
