--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,25 +5,28 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-3">
+      
     <p>User info</p>
-      <%= attachment_image_tag @user, :profile_image, format: 'jpeg', fallback: "no_image.jpg" %>
+      <%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg', fallback: "no_image.jpg", size:'150x150' %>
         <table class="table">
           <tr>
 　　        <th>name</th>
-　　        <th><%= @user.name %></th>
+　　        <th><%= current_user.name %></th>
 　        </tr>
 　        <tr>
 　　        <th>introduction</th>
-　　        <th><%= @user.introduction %></th>
+　　        <th><%= current_user.introduction %></th>
 　　      </tr>
         </table>
-      <a class="btn btn-default glyphicon glyphicon-wrench edit_user_path" href="/users/:id/edit"></a>
+      <%= link_to edit_user_path(@user), class: "btn btn-default" do %>
+        <i class="fa fa-wrench"></i>
+      <% end %>
       <p>New book</p>
-      <%= form_for(@user, url: '/users') do |f| %>
+      <%= form_for @book do |f| %>
         <p>Title</p>
         <%= f.text_field :title %>
         <p>Opinion</p>
-        <%= f.text_area :opinion %>
+        <%= f.text_area :body %>
         <%= f.submit 'Create Book' %>
       <% end %>
     </div>
@@ -31,24 +34,24 @@
     <div class="col-lg-9">
       <p>Books</p>
       <table class="table table-hover">
+        
         <thead>
           <tr>
             <th></th>
             <th>Title</th>
             <th>Opinion</th>
+            <th></th>
           </tr>
         </thead>
+        <% @books.each do |book| %>
         <tbody>
-          <% if @users.present? %>
-            <% @users.each do |user| %>
-            <tr>
-              <td></td>
-              <td><%= user.title %></td>
-              <td><%= user.opinion %></td>
-            </tr>
-            <% end %>
-          <% end %>
+          <tr>
+            <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
+            <td><%= link_to book.title, book_path(book.id) %></td>
+            <td><%= book.body %></td>
+          </tr>
         </tbody>
+        <% end %>
       </table>
     </div>
     
