--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,31 +19,37 @@
 @import 'font-awesome-sprockets';
 @import 'font-awesome';
 
-
-
-header{
-  width: 100%;
-}
-.header-container{
-  margin: 0 auto;
+* {
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+.clearfix::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.container{
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 15px;
 }
 h1{
   margin-top: 5px;
-}
-li{
-  font-family: "Gulim";
-  font-size: 12px;
-}
-h1{
   font-size: 20px;
   color: white;
+}
+.header-contents{
+  display: inline-block;
+  font-size: 13px;
+  font-family: "MS Serif";
 }
 .glyphicon{
   padding-right: 5px;
 }
-.top{
-  margin-top: 60px;
+.header-space{
+  margin-top: 60px !important;
 }
 .top-message{
   padding: 0;
@@ -54,11 +60,70 @@ h1{
 .button_wrapper{
   text-align: center; 
 }
-.bottom-top{
-  margin-bottom: 0;
-}
-.btn{
+
+.btn-top{
   width: 450px;
-  color: #555555
+  color: #555555;
 }
 
+.devise-error-messages{
+  color: red;
+}
+.user-information{
+  width: 100%;
+}
+.user-information-item{
+  margin: 0 30px;
+}
+.user-form{
+  padding-bottom: 10px;
+}
+
+.user-edit-form{
+  display: flex;
+}
+.user-introduction{
+  padding-top: 20px;
+}
+
+.notice {
+  color: green;
+}
+.alert {
+  color: red;
+}
+
+.row{
+  margin-right: -15px;
+  margin-left: -15px;
+}
+h3{
+  font-size: 30px;
+  font-weight: bold;
+}
+h4{
+  font-size: 15px;
+  font-weight: bold;
+  margin: 0 auto;
+}
+table {
+  border-collapse: collapse;
+}
+.book-form{
+  margin-bottom: 10px;
+}
+
+.table > thead{
+  border-bottom: 2px solid #ddd;
+}
+.table > tbody{
+  border-top: 1px solid #ddd !important;
+}
+
+
+
+@media screen and (max-width:768px) {  
+  .container {    
+    width: 750px;  
+    }
+}
