--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,52 +1,74 @@
 <%= render 'shared/header' %>
 
-<div class="top">
+<div class="header-space">
+  
+<%= render 'layouts/notifications' %>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-xs-3">
       
-    <p>User info</p>
-      <%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg', fallback: "no_image.jpg", size:'150x150' %>
+    <% if @book.errors.any? %>
+      <div id="error_explanation">
+        <ul>
+          <p class="error-message"><%= @book.errors.count %>errors prohibited this obj from being saved:</p>
+          <% @book.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+      
+    <h3>User info</h3>
+      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'100x100' %>
         <table class="table">
           <tr>
-　　        <th>name</th>
+　　        <th><h4>name</h4></th>
 　　        <th><%= current_user.name %></th>
 　        </tr>
 　        <tr>
-　　        <th>introduction</th>
+　　        <th><h4>introduction</h4></th>
 　　        <th><%= current_user.introduction %></th>
 　　      </tr>
         </table>
-      <%= link_to edit_user_path, class: "btn btn-default" do %>
-        <i class="fa fa-wrench"></i>
-      <% end %>
-      <p>New book</p>
-      <%= form_for(@book, url: '/users') do |f| %>
-      <% if @book.errors.any? %>
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Opinion</p>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-      <% end %>
+        <div class="row">
+          <%= link_to edit_user_path(current_user), class: "col-xs-12 btn btn-default" do %>
+            <i class="fa fa-wrench"></i>
+          <% end %>
+        </div>
+        
+        <h3>New book</h3>
+        <%= form_for @book do |f| %>
+          <div class="book-form row">
+            <label for="book_title"><h4>Title</h4></label>
+            <%= f.text_field :title, :class => 'col-xs-12' %>
+          </div>
+          <div class="book-form row">
+            <label for="book_body"><h4>Opinion</h4></label>
+            <%= f.text_area :body, :class => 'col-xs-12' %>
+          </div>
+          <div class="row">
+            <%= f.submit 'Create Book', :class => 'col-xs-12 btn btn-primary' %>
+          </div>
+        <% end %>
+        
     </div>
         
-    <div class="col-lg-9">
-      <p>Books</p>
+    <div class="col-xs-9">
+      <h3>Books</h3>
       <table class="table table-hover">
         
         <thead>
           <tr>
             <th></th>
-            <th>Title</th>
-            <th>Opinion</th>
+            <th><h4>Title</h4></th>
+            <th><h4>Opinion</h4></th>
           </tr>
         </thead>
         <% @books.each do |book| %>
         <tbody>
           <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %></td>
+            <td><%= attachment_image_tag book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
             <td><%= link_to book.title, book_path(book) %></td>
             <td><%= book.body %></td>
           </tr>
