--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,46 +1,63 @@
 <%= render 'shared/header' %>
 
-<div class="top">
-
+<div class="header-space">
+  
 <div class="container">
+<%= render 'layouts/notifications' %>
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-xs-3">
     
-    <p>User info</p>
-      <%= attachment_image_tag @user, :profile_image, :fill, 150, 150, format: 'jpeg', fallback: "no_image.jpg", size:'150x150' %>
+    <h3>User info</h3>
+      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'100x100' %>
         <table class="table">
           <tr>
-　　        <th>name</th>
-　　        <th><%= current_user.name %></th>
+　　        <th><h4>name</h4></th>
+　　        <th><%= @book.user.name %></th>
 　        </tr>
 　        <tr>
-　　        <th>introduction</th>
-　　        <th><%= current_user.introduction %></th>
+　　        <th><h4>introduction</h4></th>
+　　        <th><%= @book.user.introduction %></th>
 　　      </tr>
         </table>
-        <%= link_to edit_user_path(@book.user), class: "btn btn-default" do %>
-          <i class="fa fa-wrench"></i>
+        <% if @book.user == current_user %>
+          <div class="row">
+            <%= link_to edit_user_path(@book.user), class: "col-xs-12 btn btn-default" do %>
+              <i class="fa fa-wrench"></i>
+            <% end %>
+          </div>
+          
+          <h3>New book</h3>
+            <%= form_for @book do |f| %>
+              <div class="book-form row">
+                <div class="col-xs-12">
+                  <label for="book_title"<h4>>Title</h4></label>
+                  <%= f.text_field :title, :class => 'col-xs-12' %>
+                </div>
+              </div>
+              <div class="book-form row">
+                <div class="col-xs-12">
+                  <label for="book_body"><h4>Opinion</h4></label>
+                  <%= f.text_area :body, :class => 'col-xs-12' %>
+                </div>
+              </div>
+              <%= f.submit 'Create Book', :class => 'col-xs-12 btn btn-primary' %>
+            <% end %>
+          
         <% end %>
-      <p>New book</p>
-      <%= form_for @book do |f| %>
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Opinion</p>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-      <% end %>
     </div>
         
-    <div class="col-lg-9">
-      <p>Book detail</p>
+    <div class="col-xs-9">
+      <h3>Book detail</h3>
       <table class="table table-hover">
         <tbody>
           <tr>
-            <td><%= attachment_image_tag @user, :profile_image, :fill, 50, 50, format: 'jpeg', fallback: "no_image.jpg", size:'50x50' %><br><%= current_user.name %></td>
-            <td><%= @book.title %></td>
+            <td><%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %><br><%= @book.user.name %></td>
+            <td><%= link_to @book.title, book_path(@book) %></td>
             <td><%= @book.body %></td>
-            <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
-            <td><%= link_to "Delete", books_path(@book), class: "btn btn-danger", method: :delete %></td>
+            <% if @book.user == current_user %>
+              <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
+              <td><%= link_to "Delete", book_path(@book), class: "btn btn-danger", method: :delete %></td>
+            <% end %>
           </tr>
         </tbody>
       </table>
