--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,47 +1,47 @@
 <header class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container header-container">
+  <div class="container">
 	<div class="navbar-left">
 	  <h1>Bookers</h1>
 	</div>
 	  <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
-        <li>
+        <li class="header-contents">
         	<%= link_to user_path(current_user) do %>
             <i class="fa fa-home">Home</i>
           <% end %>
         </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to users_path do %>
             <i class="fa fa-user">Users</i>
           <% end %>
         </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to books_path do %>
             <i class="fa fa-book">Books</i>
           <% end %>
 	  	  </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to destroy_user_session_path, method: :delete do %>
             <i class="fas fa-sign-out-alt">logout</i>
           <% end %>
         </li>
       <% else %>
-        <li>
+        <li class="header-contents">
         	<%= link_to root_path do %>
             <i class="fa fa-home">Home</i>
           <% end %>
         </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to home_about_path do %>
             <i class="fa fa-link">About</i>
           <% end %>
 	  	  </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to new_user_registration_path do %>
             <i class="fa fa-edit">sign_up</i>
           <% end %>
 	  	  </li>
-	  	  <li>
+	  	  <li class="header-contents">
 	  	  	<%= link_to new_user_session_path do %>
             <i class="fas fa-sign-in-alt">login</i>
           <% end %>
