--- a/app/views/top/home.html.erb
+++ b/app/views/top/home.html.erb
@@ -1,5 +1,5 @@
 <%= render 'shared/header' %>
 
-<p class="top">Welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!</p>
+<p class="header-space">Welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!</p>
 
 <%= render 'shared/footer' %>
