--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -2,17 +2,20 @@
 
 <%= render 'shared/header' %>
 
+<div class="header-space">
+
 <div class="body">
   <div class="container">
+  <%= render 'layouts/notifications' %>
   <div class="row">
   	<div class="top-message col-md-offset-3 col-md-6">
-	  <h2 class="top-title top">welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!!</h2>
+	  <h2 class="top-title header-space">welcome to <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers!!</h2>
 	  <p>In <span class="glyphicon glyphicon-book" aria-hidden="true"></span>Bookers, </p>
 	  <p>you can share and exchange your opinions , inpressions , and emotions</p>
 	  <p>about varioius books!</p>
 	  <div class="button_wrapper">
-	    <%= link_to "Log in", new_user_session_path, class: "btn btn-info" %>
-	    <%= link_to "Sing up", new_user_registration_path, class: "btn btn-success" %>
+	    <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-top" %>
+	    <%= link_to "Sing up", new_user_registration_path, class: "btn btn-success btn-top" %>
 	  </div>
 	  </div>
 	</div>
