--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,28 +1,34 @@
 <%= render 'shared/header' %>
 
-<h2 class="top">User info</h2>
-
-<%= form_for(@user) do |f| %>
-
-  <div class="field">
-    <%= f.label :Name %><br/>
-    <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
-  </div>
-
-  <div class="form-group has-icon">
-    <label class="control-label sr-only" for="inputEmail">Image</label>
-    <%= f.attachment_field :profile_image, placeholder: "Image", class: "user-edit-form" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :Introduction %><br/>
-    <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction" %>
-  </div>
+<div class="user-information">
+  <div class="user-information-item">
   
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+  <h2 class="header-space">User info</h2>
+
+  <%= form_for(@user) do |f| %>
   
-<% end %>
+    <div class="field user-form user-edit-form">
+      <%= f.label :Name %><br/>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
+    </div>
+    
+    <div class="form-group has-icon user-edit user-form">
+      <%= f.label :Image %><br/>
+      <%= f.attachment_field :profile_image, placeholder: "Image" %>
+    </div>
+  
+    <div class="field user-form user-edit-form">
+      <%= f.label :Introduction, class: "user-introduction" %><br/>
+      <%= f.text_area :introduction, autofocus: true, autocomplete: "introduction" %>
+    </div>
+    
+    <div class="actions user-form">
+      <%= f.submit "Update User" %>
+    </div>
+    
+  <% end %>
+
+  </div>
+</div>
 
 <%= render 'shared/footer' %>
