--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,55 +1,68 @@
 <%= render 'shared/header' %>
 
-<div class="top">
+<div class="header-space">
+  
+<%= render 'layouts/notifications' %>
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-3">
-    <p>User info</p>
-      <%= attachment_image_tag @user, :profile_image_id, :fill, 250, 250, format: 'jpeg', fallback: "no_image.jpg", size:'250x250' %>
+    <div class="col-xs-3">
+      
+    <h3>User info</h3>
+      <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg', fallback: "no_image.jpg", size:'100x100' %>
         <table class="table">
           <tr>
-　　        <th>name</th>
+　　        <th><h4>name</h4></th>
 　　        <th><%= current_user.name %></th>
 　        </tr>
 　        <tr>
-　　        <th>introduction</th>
+　　        <th><h4>introduction</h4></th>
 　　        <th><%= current_user.introduction %></th>
 　　      </tr>
         </table>
-      <%= link_to edit_user_path(@user), class: "btn btn-default" do %>
-        <i class="fa fa-wrench"></i>
-      <% end %>
-      <p>New book</p>
-      <%= form_for(@book, url: '/users') do |f| %>
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Opinion</p>
-        <%= f.text_area :body %>
-        <%= f.submit 'Create Book' %>
-      <% end %>
+        <div class="row">
+          <%= link_to edit_user_path(current_user), class: "col-xs-12 btn btn-default" do %>
+            <i class="fa fa-wrench"></i>
+          <% end %>
+        </div>
+        
+        <h3>New book</h3>
+        <%= form_for @book do |f| %>
+          <div class="book-form row">
+            <label for="book_title"><h4>Title</h4></label>
+            <%= f.text_field :title, :class => 'col-xs-12' %>
+          </div>
+          <div class="book-form row">
+            <label for="book_body"><h4>Opinion</h4></label>
+            <%= f.text_area :body, :class => 'col-xs-12' %>
+          </div>
+          <div class="row">
+            <%= f.submit 'Create Book', :class => 'col-xs-12 btn btn-primary' %>
+          </div>
+        <% end %>
+        
     </div>
         
-    <div class="col-lg-9">
-      <p>Books</p>
+    <div class="col-xs-9">
+      <h3>Books</h3>
       <table class="table table-hover">
         <thead>
           <tr>
-            <th>Image</th>
-            <th>Name</th>
+            <th><h4>Image</h4></th>
+            <th><h4>Name</h4></th>
             <th></th>
           </tr>
         </thead>
         <tbody>
           <% if @users.present? %>
             <% @users.each do |user| %>
-            <%= paginate @books, class: "paginate" %>
             <tr>
               <td><%= user.profile_image_id %></td>
-              <td><%= user.name%></td>
-              <td><%= link_to "Show", user_path(@user) %></td>
+              <td><%= user.name %></td>
+              <td><%= link_to "Show", user_path(user) %></td>
             </tr>
             <% end %>
+            <%= paginate @users, class: "paginate" %>
           <% end %>
         </tbody>
       </table>
