--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,7 +38,7 @@
 	  	  </li>
 	  	  <li class="header-contents">
 	  	  	<%= link_to new_user_registration_path do %>
-            <i class="fa fa-edit">sign_up</i>
+            <i class="fa fa-edit">sign up</i>
           <% end %>
 	  	  </li>
 	  	  <li class="header-contents">
