--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,8 +2,9 @@
 
 <div class="header-space">
   
-<div class="container">
 <%= render 'layouts/notifications' %>
+
+<div class="container">
   <div class="row">
     <div class="col-xs-3">
     
@@ -19,31 +20,28 @@
 　　        <th><%= @book.user.introduction %></th>
 　　      </tr>
         </table>
-        <% if @book.user == current_user %>
-          <div class="row">
-            <%= link_to edit_user_path(@book.user), class: "col-xs-12 btn btn-default" do %>
-              <i class="fa fa-wrench"></i>
-            <% end %>
+        <div class="row">
+          <%= link_to edit_user_path(@book.user), class: "col-xs-12 btn btn-default" do %>
+            <i class="fa fa-wrench"></i>
+          <% end %>
+        </div>
+          
+        <h3>New book</h3>
+        <%= form_for @book do |f| %>
+          <div class="book-form row">
+            <label for="book_title"><h4>Title</h4></label>
+            <%= f.text_field :title, :class => 'col-xs-12' %>
           </div>
-          
-          <h3>New book</h3>
-            <%= form_for @book do |f| %>
-              <div class="book-form row">
-                <div class="col-xs-12">
-                  <label for="book_title"<h4>>Title</h4></label>
-                  <%= f.text_field :title, :class => 'col-xs-12' %>
-                </div>
-              </div>
-              <div class="book-form row">
-                <div class="col-xs-12">
-                  <label for="book_body"><h4>Opinion</h4></label>
-                  <%= f.text_area :body, :class => 'col-xs-12' %>
-                </div>
-              </div>
-              <%= f.submit 'Create Book', :class => 'col-xs-12 btn btn-primary' %>
-            <% end %>
-          
+          <div class="book-form row">
+            <label for="book_body"><h4>Opinion</h4></label>
+            <%= f.text_area :body, :class => 'col-xs-12' %>
+          </div>
+          <div class="row">
+            <%= f.submit 'Create Book', :class => 'col-xs-12 btn btn-primary' %>
+          </div>
         <% end %>
+          
+        
     </div>
         
     <div class="col-xs-9">
@@ -51,12 +49,16 @@
       <table class="table table-hover">
         <tbody>
           <tr>
-            <td><%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %><br><%= @book.user.name %></td>
+            <td>
+              <%= link_to user_path(current_user) do %>
+                <%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %><br><%= @book.user.name %>
+              <% end %>
+            </td>
             <td><%= link_to @book.title, book_path(@book) %></td>
             <td><%= @book.body %></td>
             <% if @book.user == current_user %>
               <td><%= link_to "Edit", edit_book_path(@book), class: "btn btn-success" %></td>
-              <td><%= link_to "Delete", book_path(@book), class: "btn btn-danger", method: :delete %></td>
+              <td><%= link_to "Destroy", book_path(@book), class: "btn btn-danger", method: :delete %></td>
             <% end %>
           </tr>
         </tbody>
