--- a/app/views/top/top.html.erb
+++ b/app/views/top/top.html.erb
@@ -15,7 +15,7 @@
 	  <p>about varioius books!</p>
 	  <div class="button_wrapper">
 	    <%= link_to "Log in", new_user_session_path, class: "btn btn-info btn-top" %>
-	    <%= link_to "Sing up", new_user_registration_path, class: "btn btn-success btn-top" %>
+	    <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success btn-top" %>
 	  </div>
 	  </div>
 	</div>
