--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -57,7 +57,7 @@
           <% if @users.present? %>
             <% @users.each do |user| %>
             <tr>
-              <td><%= user.profile_image_id %></td>
+              <td><%= attachment_image_tag @book.user, :profile_image, :fill, 40, 40, format: 'jpeg', fallback: "no_image.jpg", size:'40x40' %></td>
               <td><%= user.name %></td>
               <td><%= link_to "Show", user_path(user) %></td>
             </tr>
