--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,6 +5,8 @@
 <%= render 'layouts/notifications' %>
 
 <div class="container">
+  <%= render 'layouts/book_error_messages' %>
+  
   <div class="row">
     <div class="col-xs-3">
       
