--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,8 @@
 <div class="header-space">
 
 <div class="container">
-<%= render 'layouts/notifications' %>
+  <%= render 'layouts/book_error_messages' %>
+  
   <div class="row">
     <div class="col-xs-3">
       
