--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,10 @@
   clear: both;
 }
 
+body{
+  font-size: 14px;
+}
+
 .container{
   margin-right: auto;
   margin-left: auto;
@@ -93,6 +97,7 @@ h1{
   color: red;
 }
 
+
 .row{
   margin-right: -15px;
   margin-left: -15px;
@@ -120,7 +125,15 @@ table {
   border-top: 1px solid #ddd !important;
 }
 
-
+h5{
+  font-size: 36px;
+}
+.field{
+  margin-bottom: 10px;
+}
+h6{
+  font-size: 24px;
+}
 
 @media screen and (max-width:768px) {  
   .container {    
