--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,19 +2,34 @@
 
 <div class="header-space">
 
-<p>Editing Book</p>
-
-<%= form_for @book do |f| %>
-<%= render 'layouts/book_edit_error_messages', model: f.object %>
-  <p>Title</p>
-  <%= f.text_field :title %>
-  <p>Opinion</p>
-  <%= f.text_area :body %>
-  <%= f.submit 'Update Book' %>
-<% end %>
-
-<%= link_to "Show", book_path(@book) %>
-<p>|</p>
-<%= link_to "Back", books_path %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
+    
+      <h5>Editing Book</h5>
+      
+      <%= form_for @book do |f| %>
+      <%= render 'layouts/book_edit_error_messages', model: f.object %>
+        <div class="field row">
+          <label>Title</label>
+          <%= f.text_field :title, :class=>"col-xs-12" %>
+        </div>
+        <div class="field row">
+          <label>Opinion</label>
+          <%= f.text_area :body, :class=>"col-xs-12" %>
+        </div>
+        <div class="field row">
+          <%= f.submit 'Update Book', :class=>"btn btn-primary col-xs-12" %>
+        </div>
+      <% end %>
+      
+      <%= link_to "Show", book_path(@book), :style=>"color:#666;" %> |
+      <%= link_to "Back", books_path, :style=>"color:#666;" %>
+    
+    </div>
+    
+    <div class="col-md-3"></div>
+  </div>
+</div>
 
 <%= render 'shared/footer' %>
