--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,8 @@
 
 <div class="header-space">
 
+<%= render 'layouts/notifications' %>
+
 <div class="container">
   <%= render 'layouts/book_error_messages' %>
   
